--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,48 +1,41 @@
-version: '1'
-
-networks:
-    internal:
+version: '3.7'
 
 services:
-    nginx:
-        image: nginx:stable-alpine
-        container_name: nginx
-        ports:
-          - "80:80"
-        volumes:
-          - ./backend:/var/www
-          - ./config/nginx:/etc/nginx/conf.d
-          - ./logs:/var/log/nginx/
-        depends_on:
-          - php
-          - mysql
-        networks:
-          - internal
-    php:
-        build:
-          context: ./config/php
-          dockerfile: Dockerfile
-        container_name: php
-        volumes:
-          - ./backend:/var/www
-          - ./config/php/php.ini:/usr/local/etc/php/php.ini
-        ports:
-          - "9001:9000"
-        networks:
-          - internal
-    mysql:
-        image: mysql:8.0
-        container_name: mysql
-        restart: unless-stopped
-        command: --default-authentication-plugin=mysql_native_password --innodb_use_native_aio=0 --init-file /data/application/init.sql
-        ports:
-          - "3306:3306"
-        volumes:
-          - ./mysql:/var/lib/mysql
-          - ./init.sql:/data/application/init.sql
-        environment:
-          MYSQL_ROOT_USER: root
-          MYSQL_ROOT_PASSWORD: secret
-          MYSQL_DATABASE: task
-        networks:
-         - internal
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./frontend:/app
+
+  backend:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    ports:
+      - "8080:8080"
+    volumes:
+      - ./backend:/var/www/html
+      - ./config/config/php/php.ini:/usr/local/etc/php/php.ini
+
+  nginx:
+    image: nginx:alpine
+    ports:
+      - "80:80"
+    depends_on:
+      - frontend
+    volumes:
+      - ./config/nginx/task.conf:/etc/nginx/conf.d/default.conf
+      - ./frontend/build:/var/www/html
+
+  mysql:
+    image: mysql:latest
+    ports:
+      - "3306:3306"
+    environment:
+      MYSQL_DATABASE: task
+      MYSQL_ROOT_PASSWORD: mysecretpassword
+    volumes:
+      - ./config/mysql/init.sql:/docker-entrypoint-initdb.d/init.sql
